--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <script>alert('XSS')</script>
+<img src="x:x" onerror="alert(XSS)">
+<img src="x:x" onerror="alert('XSS')">
 <p><script>alert('XSS')</script></p>
