--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<script>alert('XSS')</script>
-<img src="x:x" onerror="alert(XSS)">
-<img src="x:x" onerror="alert('XSS')">
-<p><script>alert('XSS')</script></p>
+javascript:alert('XSS')
