--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<iframe src=http://54.37.156.50:5000/xss5?name=<script>alert('XSS')</script> width="300" height="600"
+<iframe src=http://54.37.156.50:5000/xss5?name width="300" height="600"
 </iframe>
