--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<iframe height="800" width="800" src="http://54.37.156.50:5000/xss5?name=
+<iframe src="http://54.37.156.50:5000/xss5?name=
+ height="800" width="800"
 </iframe>
