--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
-<iframe src="http://54.37.156.50:5000/xss5?"
+<iframe src="http://54.37.156.50:5000/"
  height="800" width="800">
