--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<iframe src="http://54.37.156.50:5000/xss5?name=script"
+<iframe src="http://54.37.156.50:5000/xss5?name=hack"
  height="800" width="800">
  <script>alert('XSS')</script>
 
