--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <script>alert('XSS')</script>
 <iframe src="http://54.37.156.50:5000/xss5?name=hack"
 height="800" width="800" id="reto">
-<img src="javascript:alert("XSS");">
+<img src="javascript:alert('XSS');">
 
 
